[tool.poetry]
name = "pixel-blaster"
version = "0.1.0"
description = ""
authors = ["Glen Beane"]
readme = "README.md"
packages = [
    { include = "pixel_blaster", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = ">=6.9.1,<7.0.0"
numpy = ">=2.3.1,<3.0.0"

[tool.poetry.scripts]
pixel-blaster = "pixel_blaster.entrypoint:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

